--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "tommcfarlin/backcast",
-	"description": "An application used to backup podcast subscriptions via Overcast XML exports.",
+	"description": "An application used to backup podcast subscriptions via podcast XML exports.",
 	"require-dev": {
 		"phpunit/phpunit": "^8"
 	},
