--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
 	"name": "tommcfarlin/backcast",
 	"description": "An application used to backup podcast subscriptions via podcast XML exports.",
 	"require-dev": {
-		"phpunit/phpunit": "^8"
+		"phpunit/phpunit": "^8",
+		"squizlabs/php_codesniffer": "^3.5"
 	},
 	"autoload": {
 		"psr-4": {
